--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-tactile
+theme: jekyll-theme-midnight
 title: Merve Nur Karabulut
 decsription: IE 582 Fall 2020 - Bogazici University
